# Ia_Economy_Sim

./: .gitignore  README.md  alembic.ini  dashboard.py  docker-compose.yml  pyproject.toml
.github/workflows/: db-integrity.yml
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py
src/evolucionia/: __init__.py  cli.py  config.py  dashboard.py  database.py  genetics.py  models.py  scaling.py  simulation.py  validation.py
src/evolucionia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_database.py  test_migrations.py  test_simulation.py  test_validation.py
